--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "netlify-cli": "^16.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -36,6 +37,7 @@
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
     "vite": "^4.4.9",
+    "vite-plugin-proxy": "^0.5.0",
     "vitest": "^0.34.4",
     "vue-tsc": "^1.8.11"
   }
